Project V6 V6 bug remediation

--- a/notebooks/05_model_interpretation.ipynb
+++ b/notebooks/05_model_interpretation.ipynb
@@ -115,8 +115,9 @@
     "best_model = mlflow.sklearn.load_model(model_uri)\n",
     "print(\"[OK] Model loaded successfully!\")\n",
     "\n",
+    "import os\n",
     "# Load test data\n",
-    "data_dir = Path('../data/processed')\n",
+    "data_dir = Path(os.path.abspath(os.path.join(os.getcwd(), '../data/processed')))\n",
     "X_train = pd.read_csv(data_dir / 'X_train.csv')\n",
     "X_val = pd.read_csv(data_dir / 'X_val.csv')\n",
     "X_test = pd.read_csv(data_dir / 'X_test.csv')\n",
