--- a/notebooks/03_baseline_models.ipynb
+++ b/notebooks/03_baseline_models.ipynb
@@ -100,8 +100,9 @@
    "metadata": {},
    "outputs": [],
    "source": [
+    "import os\n",
     "# Load processed data\n",
-    "data_dir = Path('../data/processed')\n",
+    "data_dir = Path(os.path.abspath(os.path.join(os.getcwd(), '../data/processed')))\n",
     "\n",
     "print(\"Loading processed datasets...\")\n",
     "X_train = pd.read_csv(data_dir / 'X_train.csv')\n",
