--- a/notebooks/04_hyperparameter_optimization.ipynb
+++ b/notebooks/04_hyperparameter_optimization.ipynb
@@ -133,8 +133,9 @@
     }
    ],
    "source": [
+    "import os\n",
     "# Load data\n",
-    "data_dir = Path('../data/processed')\n",
+    "data_dir = Path(os.path.abspath(os.path.join(os.getcwd(), '../data/processed')))\n",
     "\n",
     "X_train = pd.read_csv(data_dir / 'X_train.csv')\n",
     "X_val = pd.read_csv(data_dir / 'X_val.csv')\n",
